Fix sidebar header height on mobile

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -85,6 +85,7 @@ $line-height: 14px;
 // Sidebar
 $sidebar-top-margin: 60px;
 $sidebar-header-height: 100px;
+$sidebar-header-height-mobile: 150px;
 $sidebar-width: 280px;  // use this for entry boxes and sidebar width
 $widgetsTopMargin: 8px;
 $border-radius-desktop: 2px;
